# client

./: .gitignore  .gitmodules  CMakeLists.txt  Porium - Shortcut.lnk  README.md
Porium/: CMakeLists.txt  Porium.sln
Porium/Porium/: CMakeLists.txt  Main.cpp  Porium.vcxproj  Porium.vcxproj.filters
Porium/Porium/Sauce/: CMakeLists.txt  Porium.cpp  Porium.h  Vendor.h
Porium/Porium/Sauce/Hooks/: CMakeLists.txt  Hooks.cpp  Hooks.h
Porium/Porium/Sauce/Lib/CasualLibrary1.0/: CasualLibrary.hpp
Porium/Porium/Sauce/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Porium/Porium/Sauce/Module/: CMakeLists.txt  Module.cpp  Module.h  ModuleMgr.cpp  ModuleMgr.h
Porium/Porium/Sauce/Module/Mods/: CMakeLists.txt  Fullbright.cpp  Fullbright.h
Porium/Porium/Sauce/Module/Mods/Dev/: CMakeLists.txt  Uninject.cpp  Uninject.h
Porium/Porium/Sauce/Module/Mods/Graphics/: CMakeLists.txt  Fullbright.cpp  Fullbright.h
Porium/Porium/Sauce/Renderer/: CMakeLists.txt  PoriumRenderer.cpp  PoriumRenderer.h
Porium/Porium/Sauce/SDK/: CMakeLists.txt  Pointers.h
Porium/Porium/Sauce/Util/: CMakeLists.txt  Utils.cpp  Utils.h
